# qe-shc-calc

./: .gitignore  README.md  compare_shc.py  plot_bands.py  plot_charge.py  pyproject.toml  run_all_shc_pipeline.py  run_pipeline.py  run_shc.py  setup_material.py  update_win.py
